--- a/doc/Rmd/class0.Rmd
+++ b/doc/Rmd/class0.Rmd
@@ -324,7 +324,7 @@ End.
 
 # Main functions
 
-Here are the R functions that can help you run GNU MCSim more easily. All R functions are put in `function.R` in mcsim folder.
+Here are the R functions that can help you run GNU MCSim more easily. All R functions are put in `function.R` in MCSim folder.
 
 ```{r, eval=F}
 makemcsim(model)
